<resources>
    <string name="global_app_name">VANET</string>
    <string name="global_app_view_log_name">VANET Log</string>
    <string name="global_app_send_message_name">VANET Send Message</string>
    <string name="global_app_view_message_name">VANET View Message</string>
    <string name="global_app_view_routing_info_name">VANET Routing Info</string>
    <string name="global_app_edit_ignore_list_name">VANET Ignore List</string>
    <string name="global_app_share_name">VANET Share App</string>
	<string name="global_app_installed">Binaries and config-files installed!</string>
	<string name="global_app_error_restartsecwifi">Unable to restart secured wifi!</string>
	<string name="global_app_adhoc_running">Ad-Hoc mode is currently running ...</string>
	<string name="global_app_connected">connected</string>
	<string name="global_application_installed">Binaries and config files installed!</string>
	<string name="permission_manet">Allows the application to access the mobile ad-hoc network (MANET) service.</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_about">About</string>
    <string name="main_activity_send_message">Send Message</string>
    <string name="main_activity_ping_pong">Ping Pong</string>
    <string name="main_activity_start_beacon">Start Beacon</string>
    <string name="main_activity_stop_beacon">Stop Beacon</string>
    <string name="main_activity_view_routing_info">Routing Info</string>
    <string name="main_activity_donate">Donate</string>
    <string name="main_activity_close">Close</string>
    <string name="main_activity_notroot">Not Root!</string>
    <string name="main_activity_nonetfilter">No Netfilter!</string>
    <string name="main_activity_exit">Exit</string>
    <string name="main_activity_ignore">Ignore</string>
    <string name="main_activity_yes">Yes</string>
    <string name="main_activity_no">No</string>
    <string name="main_activity_ok">OK</string>
    <string name="main_activity_locked">Ad-Hoc mode is locked!</string>
    <string name="main_activity_show_log">Show Log</string>
    <string name="main_activity_share">Share</string>
    <string name="main_activity_start">Start Ad-Hoc Mode</string>
    <string name="main_activity_stop">Stop Ad-Hoc Mode</string>
    <string name="main_activity_connect">Connect MANET Service</string>
    <string name="main_activity_start_summary">Please wait while starting...</string>
    <string name="main_activity_start_errors">Ad-Hoc mode started with errors! Please check \'Show log\'.</string>
    <string name="main_activity_start_unable">Unable to start Ad-Hoc mode. Is your device \'rooted\'?</string>
    <string name="main_activity_start_wiredadhoc_running">Wired ad-hoc seems to be running at the moment. Please disable first!</string>
    <string name="main_activity_start_usbadhoc_running"><![CDATA[USB ad-hoc seems to be running at the moment. Please disable it first: Settings -> Wireless & network setting -> Internet tethering.]]></string>
    <string name="main_activity_start_unknownstate">Your phone is currently in an unknown state - try to reboot!</string>
    <string name="main_activity_stop_summary">Please wait while stopping...</string>
    <string name="main_activity_connect_summary">Please wait while connecting...</string>
    <string name="main_activity_confirm">Confirm</string>
    <string name="main_activity_cancel">Cancel</string>
    <string name="main_activity_vanet_start_vanet_service">Start VANETService</string>
    <string name="main_activity_vanet_stop_vanet_service">Stop VANETService</string>
    <string name="main_activity_vanet_initializing_gps">Initializing GPS</string>
    <string name="main_activity_vanet_waiting_for_gps_signal">Waiting for GPS signal...</string>
    <string name="main_layout_presstostart">- Press to start Ad-Hoc mode. -</string>
    <string name="main_layout_presstostop">- Press to stop Ad-Hoc mode. -</string>
    <string name="main_layout_download">Download</string>
    <string name="main_layout_upload">Upload</string>
    <string name="main_layout_lock">Lock</string>
    <string name="main_layout_ip_placeholder">[IP]</string>
    <string name="main_layout_ip">IP: </string>
    <string name="main_layout_ssid_placeholder">[SSID]</string>
    <string name="main_layout_ssid">SSID: </string>
    <string name="main_layout_btn_eventA">Event Small</string>
    <string name="main_layout_btn_eventB">Event Medium</string>
    <string name="main_layout_btn_eventC">Event Large</string>
    <string name="main_layout_btn_eventD">Event D</string>
    <string name="main_layout_vanet_neighbors"><![CDATA[<b><small>NEIGHBORS</small></b>]]></string>
    <string name="main_layout_vanet_details">
        <![CDATA[
        <p>
        <b><small>BEACONS</small></b>
        <br>
        <b><small>Sent: </small></b>%1$.3fkb <small>(%2$d)</small>
        <br>
        <b><small>Rcvd: </small></b>%3$.3fkb <small>(%4$d)</small>
        </p>
        <p>
        <b><small>EVENTS</small></b>
        <br>
        <b><small>Sent: </small></b>%5$.3fkb <small>(%6$d)</small>
        <br>
        <b><small>Rcvd: </small></b>%7$.3fkb <small>(%8$d)</small>
        </p>
        ]]>
    </string>
    <string name="main_layout_vanet_message_history"><![CDATA[<b><small>MESSAGE HISTORY %1$s</small></b>]]></string>
    <string name="main_layout_vanet_events"><![CDATA[<b><small>EVENTS %1$s</small></b>]]></string>
    <string name="main_layout_vanet_delay_label">Delay:</string>
    <string name="main_layout_vanet_src_address_label">SrcIP:</string>
    <string name="setup_activity_reinstall">(Re)-Install binaries/configs</string>
    <string name="setup_activity_restart_adhoc_title">Restart Ad-Hoc Mode</string>
    <string name="setup_activity_restart_adhoc_message">Please wait while restarting...</string>
    <string name="setup_activity_error_password_invalidchars">Password contains invalid characters, not saved!</string>
    <string name="setup_activity_error_password_tooshort">Password too short! New value was not saved.</string>
    <string name="setup_activity_error_password_toolong">Password too long! New value was not saved.</string>
    <string name="setup_activity_error_restart_adhoc">Unable to restart Ad-Hoc mode!</string>
    <string name="setup_activity_error_password_info">Password must be between 8 and 30 characters long!</string>
	<string name="setup_activity_error_password_13chars">Password must be 13 characters (ASCII) long!</string>
	<string name="setup_activity_error_ssid_invalidchars">SSID contains invalid characters</string>
	<string name="setup_activity_error_ssid_empty">New SSID cannot be empty</string>
	<string name="setup_activity_error_ssid_notsaved">, not saved.</string>
	<string name="setup_activity_info_ssid_changedto">SSID changed to </string>
	<string name="setup_activity_info_channel_changedto">Channel changed to </string>
	<string name="setup_activity_info_password_changedto">Password changed to </string>
	<string name="setup_activity_info_txpower_changedto">Transmit power changed to </string>
	<string name="setup_activity_info_ip_changedto">IP changed to </string>
	<string name="setup_activity_bt_warning_title">Warning: Bluetooth</string>
	<string name="setup_activity_bt_warning_ok">OK</string>
	<string name="setup_activity_txpower_warning_title">Warning: Transmit Power</string>
	<string name="setup_activity_txpower_warning_ok">OK</string>
	<string name="setup_layout_category_general">General</string>
	<string name="setup_layout_category_bluetooth">Bluetooth</string>
	<string name="setup_layout_category_wifi">Wifi</string>
	<string name="setup_layout_category_ip">IP</string>
	<string name="setup_layout_category_misc">Miscellaneous</string>
	<string name="setup_layout_category_routing">Routing</string>
	<string name="setup_layout_usebluetooth">Use Bluetooth</string>
	<string name="setup_layout_usebluetooth_summary">Bluetooth PAN ad-hoc instead of WiFi</string>
	<string name="setup_layout_dontdisablewifi">Don\'t disable WiFi</string>
	<string name="setup_layout_dontdisablewifi_summary">Leave WiFi state alone</string>
	<string name="setup_layout_discoverable">Discoverable</string>
	<string name="setup_layout_discoverable_summary">Make device discoverable for 120 seconds on start-up</string>
	<string name="setup_layout_screenon">Keep Screen On</string>
	<string name="setup_layout_screenon_summary">Keep screen on in dimmed state when in ad-hoc mode</string>
	<string name="setup_layout_encryption_algorithm">Encryption algorithm</string>
	<string name="setup_layout_encryption_algorithm_summary">Change wifi encryption algorithm</string>
	<string name="setup_layout_encryption_algorithm_dialog_title">Select Algorithm</string>
	<string name="setup_layout_encryption_setup">Encryption setup method</string>
	<string name="setup_layout_encryption_setup_summary">Change wifi encryption setup method</string>
	<string name="setup_layout_encryption_setup_dialog_title">Select Setup Method</string>
	<string name="setup_layout_password">Password</string>
	<string name="setup_layout_password_summary_wpa">Change password for wifi encryption (WPA/WPA2-PSK)</string>
	<string name="setup_layout_password_summary_wep">Change password for wifi encryption (WEP 128-bit)</string>
	<string name="setup_layout_password_dialog_title">Enter Password</string>
	<string name="setup_layout_ssid">SSID</string>
	<string name="setup_layout_ssid_summary">Change SSID</string>
	<string name="setup_layout_ssid_dialog_title">Enter SSID</string>
	<string name="setup_layout_ssid_dialog_message">Only alpha-numeric characters and \'.\', \'_\' allowed!</string>
	<string name="setup_layout_channel">Channel</string>
	<string name="setup_layout_channel_summary">Change wireless frequency channel</string>
	<string name="setup_layout_channel_dialog_title">Select Channel</string>
	<string name="setup_layout_txpower">Transmit Power</string>
	<string name="setup_layout_txpower_summary">Change transmit power</string>
	<string name="setup_layout_txpower_dialog_title">Select Power Level</string>
	<string name="setup_layout_interface">Wireless Interface</string>
    <string name="setup_layout_interface_summary">Change wireless interface</string>
    <string name="setup_layout_interface_dialog_title">Select Interface</string>
	<string name="setup_layout_ip">IP Address</string>
    <string name="setup_layout_ip_summary">Change static IP address</string>
	<string name="setup_layout_ip_dialog_title">Enter IP Address</string>
	<string name="setup_layout_dns">DNS Server</string>
    <string name="setup_layout_dns_summary">Change DNS server</string>
	<string name="setup_layout_dns_dialog_title">Enter DNS Server Address</string>
	<string name="setup_layout_vibrate">Vibrate on connect</string>
	<string name="setup_layout_ringtone">Notification Ringtone</string>
    <string name="pingPong_title"><![CDATA[<h2>VANET Ping Pong</h2>]]></string>
    <string name="pingPong_label_numberOfPackets">Number of packets to send</string>
    <string name="pingPong_label_opponentAddress">Opponent address (neighbor)</string>
    <string name="pingPong_spinnerPrompt_opponentAddress">Choose opponent...</string>
    <string name="pingPong_label_packetPayloadSize">Payload size</string>
    <string name="pingPong_button_startPingPong">Start Ping Pong</string>
    <string name="pingPong_results">
        <![CDATA[
        <p>
        <b><small>RESULT</small></b>
        <br>
        <b><small>Packets sent: </small></b>%1$d/%2$d
        <br>
        <b><small>Packets received: </small></b>%3$d
        <br>
        <b><small>Average response time: </small></b>%4$d
        <br>
        <b><small>Min. response time: </small></b>%5$d
        <br>
        <b><small>Max. response time: </small></b>%6$d
        <br>
        <b><small>Ping pong duration: </small></b>%7$d
        </p>
        ]]>
    </string>
</resources>