<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pingPong_title" />

            <TextView
                android:id="@+id/textView_label_numberOfPackets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_title"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pingPong_label_numberOfPackets" />

            <EditText
                android:id="@+id/editText_numberOfPackets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_label_numberOfPackets"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/textView_label_packetPayloadSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_numberOfPackets"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pingPong_label_packetPayloadSize" />

            <EditText
                android:id="@+id/editText_packetPayloadSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_label_packetPayloadSize"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/textView_label_opponentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_packetPayloadSize"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pingPong_label_opponentAddress" />

            <Spinner
                android:id="@+id/spinner_opponentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_label_opponentAddress"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:prompt="@string/pingPong_spinnerPrompt_opponentAddress" />

            <Button
                android:id="@+id/button_startPingPong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner_opponentAddress"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pingPong_button_startPingPong" />

            <TextView
                android:id="@+id/textView_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_startPingPong"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pingPong_results" />
        </RelativeLayout>
    </ListView>

</RelativeLayout>