<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- android:background="@drawable/background" -->

    <RelativeLayout
        android:id="@+id/layoutHeaderMain"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="#cecece"
        android:visibility="invisible" >

        <!-- android:background="#A0909090" -->

        <RelativeLayout
            android:id="@+id/layoutBatteryTemp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10px"
            android:layout_marginTop="10px"
            android:background="@drawable/battery"
            android:gravity="center" >

            <TextView
                android:id="@+id/batteryTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5px"
                android:text="N/A"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5px"
            android:layout_marginTop="5px"
            android:layout_toRightOf="@id/layoutBatteryTemp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvSSIDLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_layout_ssid"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSSID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/main_layout_ssid_placeholder"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvIPLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_layout_ip"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvIP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/main_layout_ip_placeholder"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" >

            <ToggleButton
                android:id="@+id/toggleBtn_startStopBeacon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:drawableRight="@drawable/drw_beacon_on_off"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:textOn="@null"
                android:textOff="@null" />
            
            <ToggleButton
                android:id="@+id/toggleBtn_startStopVanet"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:drawableRight="@drawable/drw_vanet_on_off"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:textOn="@null"
                android:textOff="@null" />
            
            <ToggleButton
                android:id="@+id/toggleBtn_startStopAdHocMode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:drawableRight="@drawable/drw_adhoc_on_off"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:textOn="@null"
                android:textOff="@null" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutHeaderMain"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_details"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:background="#eaeaea" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_neighbors_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/main_layout_vanet_neighbors" />

            <ListView
                android:id="@+id/listView_neighbors"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_content_down"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout_eventBtns"
        android:layout_below="@id/linearLayout_content"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/textView_message_history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/main_layout_vanet_message_history" />
        
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></ListView>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#eaeaea" >
            
            <TextView
                android:id="@+id/textView_events_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/main_layout_vanet_events" />
        
            <ListView
                android:id="@+id/listView_events"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></ListView>
            
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_eventBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#cecece" >

        <Button
            android:id="@+id/btn_eventA"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ellipsize="start"
            android:text="@string/main_layout_btn_eventA" />

        <Button
            android:id="@+id/btn_eventB"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ellipsize="start"
            android:text="@string/main_layout_btn_eventB" />

        <Button
            android:id="@+id/btn_eventC"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ellipsize="start"
            android:text="@string/main_layout_btn_eventC" />

        <!-- Button
            android:id="@+id/btn_eventD"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ellipsize="start"
            android:text="@string/main_layout_btn_eventD" / -->
    </LinearLayout>

</RelativeLayout>